Added swagger. Added HttpClient factory pattern, and BreweryDB API client. Added results class, etc.

--- a/AspNet.Essentials.Workshop/appsettings.json
+++ b/AspNet.Essentials.Workshop/appsettings.json
@@ -4,5 +4,9 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "BrewerySettings": {
+    "BaseUrl": "https://sandbox-api.brewerydb.com/v2/",
+    "ApiKey": "[ Something special... ]"
+  } 
 }
